--- a/bnw/localisation/braveworld_bookmarks_l_german.yml
+++ b/bnw/localisation/braveworld_bookmarks_l_german.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_german:
  BM_HISTORY_TITLE:0 "Geschichtlicher Abriss"
  TURNOFCENTURY_NAME:0 "Jahrhundertwende"
  TURNOFCENTURY_DESC:0 "Es ist der Anfang des 20. Jahrhunderts und die Welt feiert alles. In den nationalen Angelegenheiten sind Großbritannien und Frankreich nach wie vor die dominierenden kaiserlichen Mächte. Die Vereinigten Staaten von Amerika feiern ihre Erfolge bei der Überwindung der europäischen Lebensqualität während Deutschland den militärische Siege über Frankreich feiert. In Russland beginnt ein rascher Fortschritt in der modernen Industrie. Die Welt ist voller Leben, aber die Spannungen wachsen schweigend hinter den Kulissen."
