--- a/bnw/localisation/braveworld_countries_I_german.yml
+++ b/bnw/localisation/braveworld_countries_I_german.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_german:
  AHU_fascism:0 "Österreich-Ungarn"
  AHU_fascism_DEF:0 "Das österreichisch-ungarische Reich"
  AHU_democratic:0 "Österreichisch-ungarische Republik"
