--- a/bnw/localisation/braveworld_ideas_l_german.yml
+++ b/bnw/localisation/braveworld_ideas_l_german.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_german:
  #Austria-Hungary + Generics#
  habsburg:0 "Habsburger Dynastie"
  habsburg_desc:0 "Die habsburger Dynastie regiert immer noch über das österreichisch-ungarische Reich, obwohl andere Teile des Hauses in Unordnung geraten."
