--- a/bnw/localisation/braveworld_loading_tips_l_german.yml
+++ b/bnw/localisation/braveworld_loading_tips_l_german.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_german:
  LOADING_TIP_78:0 "Siehst du Paradox? Ich kann auch Wikipedia benutzen! \n - IMakeMods"
  LOADING_TIP_79:0 "Das Gefühlen, wenn Sie Ihre eigene AI schreiben müssen. \n - IMakeMods"
  LOADING_TIP_80:0 "Wenn jemand irgendwelche Fragen zum Vereinigungsvertrag hat, kann ich es jetzt beantworten. \n - IMakeMods"
