--- a/bnw/localisation/strategic_region_names_l_german.yml
+++ b/bnw/localisation/strategic_region_names_l_german.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_german:
  STRATEGICREGION_1:0 "Südengland"
  STRATEGICREGION_2:0 "Nordengland"
  STRATEGICREGION_3:0 "Schottland und Nordirland"
