--- a/bnw/localisation/supply_area_names_l_german.yml
+++ b/bnw/localisation/supply_area_names_l_german.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_german:
  SUPPLYAREA_1:0 "Versorgungsgebiet"
  SUPPLYAREA_2:0 "Versorgungsgebiet"
  SUPPLYAREA_3:0 "Versorgungsgebiet"
